--- a/style.css
+++ b/style.css
@@ -26,17 +26,29 @@ body{
 
 li, a, button{
     font-weight: 500;
-    font-size: 16px;
+    font-size: 20px;
     color: #EDf0f1;
     text-decoration: none;
 
 }
 
+
 header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 30px 10%;
+    padding: 30px 150px;
+}
+header h1{
+color: #fff;
+}
+header span{
+  font-size:1.6rem;
+  font-weight: 500;
+  color: lightgreen;
+}
+header .btn{
+  padding-left: 90px;
 }
 .text{
     font-weight: 500;
@@ -56,7 +68,7 @@ header{
 
 .nav_links li{
     display: inline-block;
-    padding: 0px 20px;
+    padding: 0px 20px ;
 }
 /* 
 Position relative to make a block and paring it to the element (text)
