--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body{
 
 li, a, button{
     font-weight: 500;
-    font-size: 20px;
+    font-size: 22px;
     color: #EDf0f1;
     text-decoration: none;
 
@@ -39,9 +39,38 @@ header{
     align-items: center;
     padding: 30px 150px;
 }
-header h1{
-color: #fff;
+
+header .rumble {
+  display: inline-block;
+  text-shadow: 0 0 0 #000, 0 0 5px #0f0;
+  color: #fff;
+
 }
+
+header .rumble:hover {
+  animation: rumble 0.8s linear forwards;
+}
+
+@keyframes rumble {
+  10%, 90% {
+    transform: translate(-1px, -1px) rotate(-2deg);
+  }
+  
+  20%, 80% {
+    transform: translate(2px, 0px) rotate(2deg);
+  }
+  
+  30%, 50%, 70% {
+    transform: translate(-4px, -2px) rotate(-3deg);
+  }
+  
+  40%, 60% {
+    transform: translate(4px, 2px) rotate(3deg);
+  }
+  
+  100% {
+    transform: translate(0, 0) rotate(0);
+  }
 header span{
   font-size:1.6rem;
   font-weight: 500;
