Reveal transition update & add infos

--- a/style.css
+++ b/style.css
@@ -11,7 +11,13 @@
         padding: 30px 10%;
     }
 }
-
+html{
+    scroll-behavior: smooth;
+}
+.texto{
+    color: #fff;
+    font-size: 1.5rem;
+}
 
 * {
     box-sizing: border-box;
@@ -23,20 +29,200 @@ body{
     background-color: #24252A;
 
 }
+.sec-01 {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding:  80px 100px;
+    color: #fff;
+}
+.sec-02{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding:  80px 100px;
+    color: #fff;
+}
+.sec-03{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding:  80px 100px;
+    color: #fff;
+    margin-bottom: 100px;
+}
+.container{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.main-title{
+    font-size: 4em;
+    margin-bottom: 50px;
+}
+.content{
+    position: relative;
+    width: 1150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.content .image{
+    position: relative;
+    width: 300px;
+    height: 400px;
+    overflow: hidden;
+}
+.content .image img{
+    z-index: 111;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
 
+}
+
+.content .text-box{
+    z-index: 222;
+    background-color: rgba(255,255,255,0.1);
+    backdrop-filter: blur(20px);
+    padding: 40px;
+    max-width: 400px;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 10px;
+    transform: translate(-80px, 50px);
+}
+
+.content .text-box h3{
+    font-size: 2em;
+    margin-bottom: 10px;
+
+}
+
+.media-icons{
+    margin-top: 100px;
+}
+
+.media-icons a{
+    color: #fff;
+    font-size: 2em;
+    margin: 60px;
+}
+
+.section-title{
+    font-size: 3em;
+    margin-bottom: 80px;
+
+}
+
+.info-title{
+    font-size: 1.8em;
+    margin-bottom: 10px;
+}
+.info{
+    width: 700px;
+    margin-left: 50px;
+
+}
+.media-info{
+    width: 400px;
+    margin-left: 50px;
+}
+
+.media-info li{
+    list-style: none;
+    font-size: 1.4em;
+
+}
+
+.media-info li a{
+    color: white;
+    text-decoration: none;
+}
+
+.media-info li:not(:last-child){
+    margin-bottom: 50px;
+}
+
+.media-info li:nth-child(1), .media-info li:nth-child(5){
+    padding-left: 100px;
+}
+
+
+.media-info li:nth-child(2), .media-info li:nth-child(4){
+    padding-left: 50px;
+}
 li, a, button{
     font-weight: 500;
-    font-size: 16px;
+    font-size: 22px;
     color: #EDf0f1;
     text-decoration: none;
 
 }
 
+
 header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 30px 10%;
+    padding: 30px 150px;
+}
+
+header .rumble {
+  display: inline-block;
+  text-shadow: 0 0 0 #000, 0 0 5px #0f0;
+  color: #fff;
+
+}
+
+header .rumble:hover {
+  animation: rumble 0.8s linear forwards;
+}
+
+@keyframes rumble {
+  10%, 90% {
+    transform: translate(-1px, -1px) rotate(-2deg);
+  }
+  
+  20%, 80% {
+    transform: translate(2px, 0px) rotate(2deg);
+  }
+  
+  30%, 50%, 70% {
+    transform: translate(-4px, -2px) rotate(-3deg);
+  }
+  
+  40%, 60% {
+    transform: translate(4px, 2px) rotate(3deg);
+  }
+  
+  100% {
+    transform: translate(0, 0) rotate(0);
+  }
+}
+  
+header span{
+  font-size:1.6rem;
+  font-weight: 500;
+  color: lightgreen;
+}
+
+header h1{
+    font-size:1.6rem;
+    font-weight: 500;
+    color: rgb(0, 182, 0);
+  }
+
+header .btn{
+  padding-left: 20px;
 }
 .text{
     font-weight: 500;
@@ -56,7 +242,7 @@ header{
 
 .nav_links li{
     display: inline-block;
-    padding: 0px 20px;
+    padding: 0px 20px ;
 }
 /* 
 Position relative to make a block and paring it to the element (text)
@@ -89,7 +275,7 @@ color:#00ff11 ;
 }
 
 button{
-    padding: 9px 25px;
+    padding: 9px 20px;
     background-color: rgb(20, 149, 0);
     border: none;
     border-radius: 50px;
